Background color fixed on mobile

--- a/main.css
+++ b/main.css
@@ -125,7 +125,6 @@ img {
     
     .project-box {
         width: 100%;
-        background-color: skyblue;
         padding: 0px;
     }
     
